2006-03-29  Lillian Angel  <langel@redhat.com>

	Partial fix for bug #26929
	* gnu/java/awt/peer/gtk/GtkPanelPeer.java
	(updateComponent): Removed. We want to clear the panel
	before painting.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GdkGraphics.c
	(Java_gnu_java_awt_peer_gtk_GdkGraphics_clearRect): Fixed typo.
	Should set the background to the saved background color.

2006-03-29  Mark Wielaard  <mark@klomp.org>

	Partial fix for bug #26848 (pack).
	* gnu/java/awt/peer/gtk/GtkComponentPeer.java (setVisible):
	Always show instances of Window.

2006-03-29  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JSlider.java
	(setPaintLabels): Only create standard labels if labelTable is null,
	* javax/swing/plaf/basic/BasicSliderUI.java
	(PropertyChangeHandler.propertyChange): Recalculate geometry for 
	"paintTicks" property change,
	(calculateThumbSize): Updated API docs,
	(calculateContentRect): Likewise,
	(calculateTrackBuffer): Take into account the lowest and highest 
	labels when calculating buffer space,
	(calculateTrackRect): Include labels, if visible, in the calculation of
	the trackRect position,
	(calculateTickRect): Height is zero if ticks are not painted,
	(calculateLabelRect): Use max dimensions of actual labels,
	(getWidthOfHighValueLabel): Use preferred size,
	(getWidthOfLowValueLabel): Likewise,
	(getHeightOfHighValueLabel): Likewise,
	(getHeightOfLowValueLabel): Likewise,
	(drawInverted): Just return slider setting,
	(getHighestValueLabel): Updated API docs,
	(paintTicks): Removed redundant (and buggy) code, replaced with calls 
	to xPositionForValue() and yPositionForValue(),
	(paintHorizontalLabel): Removed full qualification of class name,
	(paintVerticalLabel): Likewise,
	(xPositionForValue): Reimplemented,
	(yPositionForValue): Reimplemented,
	* javax/swing/plaf/metal/MetalSliderUI.java
	(paintTrack): Made track one pixel longer.

2006-03-29  Tom Tromey  <tromey@redhat.com>

	PR gcc/26901: